Add phrase "After following the map, and getting bad results with using LinearSVC and KNeighbors Classifier, you decide ...
This makes more sense to someone learning how to use the "Choosing the right estimator" map

--- a/section-2-data-science-and-ml-tools/scikit-learn-exercises.ipynb
+++ b/section-2-data-science-and-ml-tools/scikit-learn-exercises.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "To figure out which machine learning model we should use, you can refer to [Scikit-Learn's machine learning map](https://scikit-learn.org/stable/tutorial/machine_learning_map/index.html).\n",
     "\n",
-    "After following the map, you decide to use the [`RandomForestClassifier`](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html).\n",
+    "After following the map, and getting bad results with using LinearSVC and KNeighbors Classifier, you decide to use the [`RandomForestClassifier`](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html).\n",
     "\n",
     "### 2. Preparing a machine learning model"
    ]
